--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "e2e": "cypress run",
-    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://0.0.0.0:5173 e2e"
+    "ci:test": "vitest --no-watch && start-server-and-test dev http-get://localhost:5173 e2e"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-redux-loading-bar": "^5.0.8",
     "react-router-dom": "^6.26.2",
+    "react-script": "^2.0.5",
     "redux": "^5.0.1"
   },
   "devDependencies": {
